# ForgeMind

./: .env.example  .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  modal_benchmark.py  pyproject.toml
.agents/skills/ForgeMind/: SKILL.md
.agents/skills/ForgeMind/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/commands/: feature-development.md  feature-or-fix-with-implementation-and-test.md  multi-module-feature-expansion.md
.claude/homunculus/instincts/inherited/: ForgeMind-instincts.yaml
.codex/: AGENTS.md
.github/workflows/: ci.yml
assets/: manifest.json
benchmarks/: README.md  __init__.py  build_forgebench.py  generate_archive.py  import_external.py
examples/showcase-repository/: README.md
examples/showcase-repository/database/: 2026-04-18-user-uuid.sql
examples/showcase-repository/src/session/: decoder.ts
scripts/: build_submission.py  clean_checkout_test.ps1  demo.ps1  export_paper.ps1  release_check.py  runtime_smoke.py  verify_assets.py
src/forgemind/: __main__.py  benchmark.py  cli.py  config.py  context.py  domain.py  eval.py  ingest.py  offline.py  reasoning.py  retrieval.py  runtime.py  store.py  tokenforge.py  verification.py  web.py
src/forgemind/prompts/: reasoning-system.txt
src/forgemind/static/: app.css
src/forgemind/templates/: index.html
tests/: test_benchmark.py  test_build_submission.py  test_cli.py  test_config.py  test_context.py  test_dashboard.py  test_demo_contract.py  test_eval.py  test_external_import.py  test_forgebench_builder.py  test_incremental_ingest.py  test_ingest.py  test_modal_benchmark.py  test_no_private_files.py  test_public_docs.py  test_reasoning.py  test_release_check.py  test_retrieval.py  test_runtime.py  test_scale_profile.py  test_smoke.py  test_store.py  test_tokenforge.py  test_verification.py  test_verify_assets.py  test_web.py
