[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "forgemind"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = ["httpx>=0.28,<1"]

[project.optional-dependencies]
dev = ["pytest>=8.4,<9"]

[project.scripts]
forgemind = "forgemind.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
